--- a/laravel/.env
+++ b/laravel/.env
@@ -2,10 +2,10 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=zbNE7nUznGnPxQcw2wcfS2Vwm7KibvQ1
 
-DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_HOST=mysql.ecobos.dreamhosters.com
+DB_DATABASE=godzillakilla
+DB_USERNAME=thisduckingguy
+DB_PASSWORD=1cucu4cocopuffs!
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -17,3 +17,11 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+CLIENT_ID_FB=1653123364929578
+CLIENT_SECRET_FB=9a1dc8493c068db46b402515503f23cb
+REDIRECT_FB=http://localhost:8000/auth/facebook/login-callback
+
+CLIENT_ID_GOOGLE=746432781140-cbva69f7om7dqd5n49bcbqb9poimht17.apps.googleusercontent.com
+CLIENT_SECRET_GOOGLE=C4X_4Uz77Wzw2GKUHDbXvsuG
+REDIRECT_GOOGLE=http://localhost:8000/auth/google/login-callback
